3/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: app
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
